Correct broken javadoc tag usage